--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,4 +1,6 @@
-FROM debian:buster-slim as base
+ARG PYTHON_VERSION
+
+FROM python:${PYTHON_VERSION}-alpine
 
 # recommended for python in docker
 ENV PYTHONUNBUFFERED 1
@@ -12,28 +14,12 @@ ENV PIPENV_NOSPIN 1
 # needed by pipenv to activate shell
 ENV LANG en_US.UTF-8
 ENV LC_ALL C.UTF-8
-ENV SHELL /bin/bash
+ENV SHELL /bin/sh
 
 WORKDIR /app
 
-RUN apt-get update
-RUN apt-get install -y postgresql-client python3-pip python3-setuptools
-RUN pip3 install pip pipenv setuptools
 RUN mkdir -p /srv/static
 
-# provide build args of UID and USER. Matching the host's UID during dev allows
-# one to yield files to host fs w/ correct perms from the container
-ARG UID=1000
-ENV UID=${UID}
-ARG USER=user
-ENV USER=${USER}
-
-# setup OS environment
-RUN echo "BASE IMAGE CREATED WITH ${USER} AS ${UID}" \
-    && useradd -lmU -u ${UID} -s /bin/bash ${USER} \
-    && chown -R ${USER}:${USER} /app \
-    && chown -R ${USER}:${USER} /srv/static
-
-RUN apt-get install -y git gcc libpq-dev python3-dev
-RUN pip3 install psycopg2
-RUN apt-get autoremove -y
+RUN apk update
+RUN apk add postgresql-client postgresql-dev py3-pip gcc musl-dev python3-dev
+RUN pip3 install pipenv psycopg2
